@@ -1,4 +1,8 @@
-﻿drkns 13.05.2016 00:33:18 +0200 - build 4671
+﻿zg 15.05.2016 00:33:49 +0200 - build 4672
+
+1. с форума: символ из "бюжэхъё" не включается в быстрый поиск.
+
+drkns 13.05.2016 00:33:18 +0200 - build 4671
 
 1. Уточнение обработки исключений для gcc.
 
